Fixed text-align style.

--- a/business_theme/static/styles/_text.scss
+++ b/business_theme/static/styles/_text.scss
@@ -146,6 +146,14 @@ a.text-dark:hover, a.text-dark:focus {
     }
 }
 
+.body {
+    text-align: justify;
+
+    pre, h1, h2, h3, h4, h5, h6 {
+        text-align: left;
+    }
+}
+
 a.download {
     code.download.literal.notranslate {
         color: #083764;
